2006-08-30 svu

	* configure.in, NEWS: preparing release 3.0

2006-08-03 svu

	* libxklavier/xklavier_config.c: Loading with custom SAX handler
	(inherited from the existing default DOM builder). Now, loaded XML
	takes only 500K (for us locale). Hurray! 

2006-08-02 svu

	* libxklavier/xklavier_config.c: improving the XML parsing options,
	saving at least 1M of heap.

2006-07-30 svu

	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_i18n.c, libxklavier/xklavier_private.h,
	tests/test_config.c: simplifying description charset conversion,
	adding custom charset (as Andriy requested)

2006-07-30 svu

	* configure.in, libxklavier/Makefile.am: fixing autoconf stuff for
	modular X

2006-07-30 svu

	* libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_private_xkb.h: patching mismatch between
	declarations and functions. Fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=349275

2006-07-29 svu

	* xkeyboard_config.c: sanity patch, fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=346980

2006-07-01 svu

	* autogen.sh, configure.in, gtk-doc.make: Make life better for people
	building without gtkdoc.

2006-07-01 svu

	* libxklavier.pc.in: added missing Cflags, Libs

2006-06-30 svu

	* libxklavier/xklavier.c, libxklavier/xklavier_config_xmm.c,
	libxklavier/Makefile.am, configure.in: Small fix for xmodmap,
	configure script gives more info about the configuration, at the end.

2006-06-04 svu

	* libxklavier/xklavier_props.c: fixed default options handling,
	the gchar** array changed from NULL to g_new0( char*, 1)

2006-05-20 svu

	* configure.in,
	libxklavier/Makefile.am,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_dump.c,
	libxklavier/xklavier_evt_xkb.c,
	libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_xkb.c: xkb_headers -> libxkbfile,
	linking to xkbfile is also optional. 
	Thanks to Thomas Vander Stichele

2006-04-30 svu

	* autogen.sh: fail on autoconf/automake errors,
	thanks to Thomas Stichele
