@@ -1,3 +1,7 @@
+2006-10-07 svu
+
+	* *.h,*.c: added copyright statements, as requested by debian folks
+
 2006-08-30 svu
 
 	* configure.in, NEWS: preparing release 3.0
